{file}[CircleProgress.css]-> modify z-index style value for fix bug in  navbar

--- a/src/css/components/items/CircleProgress/CircleProgress.css
+++ b/src/css/components/items/CircleProgress/CircleProgress.css
@@ -31,7 +31,7 @@
     text-align: center;
     display: block;
     color:var(--color-main);
-    z-index: 2;
+    z-index: 1;
 }
 .left-half-clipper {
     /* a round circle */
